--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-slate
+title: Welcome to the Lavlesh's Homepage!
+description: You can bookmark this for intersting information about ServiceNow
