--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,8 @@
 theme: jekyll-theme-slate
 title: Welcome to the Lavlesh's Homepage!
 description: You can bookmark this for intersting information about ServiceNow
+plugins:
+  - jekyll-relative-links
+relative_links:
+  enabled: true
+  collections: true
